--- a/src/main/webapp/resources/css/greypower/greypower-estilos.css
+++ b/src/main/webapp/resources/css/greypower/greypower-estilos.css
@@ -1,15 +1,18 @@
-.altura-elemento_formulario-alto{
+.altura-elemento_formulario-alto {
 	height: 40px;
 }
 
-.altura-elemento_formulario-medio{
+.altura-elemento_formulario-medio {
 	height: 30px;
 }
 
-.altura-elemento_formulario-bajo{
+.altura-elemento_formulario-bajo {
 	height: 20px;
 }
 
 /* .margen-bajo-tabla{ */
 /* 	magin-bottom: 0; */
 /* } */
+div.ui-datepicker {
+	font-size: 70%;
+}
