--- a/src/main/webapp/resources/css/greypower/greypower-estilos.css
+++ b/src/main/webapp/resources/css/greypower/greypower-estilos.css
@@ -27,5 +27,29 @@ h5.titulo-cabecera-modal{
 a.etiqueta{
 	text-decoration: none;
 }
+
+.text-box-tabla{
+	display:table-cell; 
+	width:100%; 
+	height: 100% ; 
+	border: 0; 
+	padding:0;
+}
+
+.descripcion{
+	display:table-cell; 
+	width:100%; 
+	height: 100% ; 
+	border: 0; 
+	padding:0;
+}
+
+#descripcion{
+	display:table-cell; 
+	width:100%; 
+	height: 100% ; 
+	border: 0; 
+	padding:0;
+}
 												
 
