--- a/src/main/webapp/resources/css/greypower/greypower-estilos.css
+++ b/src/main/webapp/resources/css/greypower/greypower-estilos.css
@@ -28,28 +28,22 @@ a.etiqueta{
 	text-decoration: none;
 }
 
-.text-box-tabla{
-	display:table-cell; 
-	width:100%; 
-	height: 100% ; 
-	border: 0; 
-	padding:0;
+tbody.scrollContent {
+/*     display: block; */
+/*     height: 100px; */
+/*     overflow: auto; */
+/*     width: 100%; */
 }
 
-.descripcion{
-	display:table-cell; 
-	width:100%; 
-	height: 100% ; 
-	border: 0; 
-	padding:0;
-}
+/* input.textTabla{ */
+/* 	display:table-cell;  */
+/* 	width:100%;  */
+/* 	height: 100% ;  */
+/* 	border: 0;  */
+/* 	padding:0; */
+/* } */
 
-#descripcion{
-	display:table-cell; 
-	width:100%; 
-	height: 100% ; 
-	border: 0; 
-	padding:0;
-}
+
+
 												
 
