--- a/src/main/webapp/resources/css/greypower/greypower-estilos.css
+++ b/src/main/webapp/resources/css/greypower/greypower-estilos.css
@@ -30,37 +30,23 @@ a.etiqueta {
 
 .text-box-tabla {
 	display: table-cell;
-	width: 100%;
-	height: 100%;
+	height: 44px;
 	border: 0;
 	padding: 0;
+	padding-left: 8px;
+	width: 99%;
 }
 
-.descripcion {
-	display: table-cell;
-	width: 100%;
-	height: 100%;
-	border: 0;
-	padding: 0;
-}
 
-#descripcion {
-	display: table-cell;
-	width: 100%;
-	height: 100%;
-	border: 0;
-	padding: 0;
-}
+/* tbody.scrollContent { */
+/* 	display: block; */
+/* 	height: 150px; */
+/* 	overflow: auto; */
+/* 	width: 100%; */
+/* } */
 
-tbody.scrollContent {
-	display: block;
-	height: 150px;
-	overflow: auto;
-	width: 100%;
-}
-
-thead.scrollContent {
-	display: table-header-group;
-	vertical-align: middle;
-	border-color: inherit;
-}
+/* thead.scrollContent { */
+/* 	display: table-header-group; */
+/* 	vertical-align: middle; */
+/* 	border-color: inherit; */
+/* } */
